--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
     <main class="main">
       <section class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d69738.62556490196!2d30.293332345399058!3d59.94116086363636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1496424057387" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <div class="map__dark-bg"></div>
       </section>
       <aside class="sidebar">
         <section class="sidebar__item">
